--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   # cloud_firestore: ^5.1.0 
 
   # firebase_messaging: ^15.0.0 
-
+  flutter_slidable: ^3.1.0 
   glassmorphism: ^3.0.0             # Jika Anda masih menggunakan widget ini
   flutter_animate: ^4.3.0
   lottie: ^3.1.0                    # Versi lebih baru (cek pub.dev)
