--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   google_fonts: ^6.2.1
   firebase_performance: ^0.10.1+7
   supabase_flutter: ^2.9.1
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
