--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   equatable: ^2.0.5
   freezed_annotation: ^2.4.1       
   json_annotation: ^4.9.0         
-
+  collection: ^1.18.0 
   # --- Icons & Fonts ---
   iconsax: ^0.0.8
 
