--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   # --- State Management (Riverpod) ---
-  flutter_riverpod: ^2.5.1 # Versi stabil terbaru
-  riverpod_annotation: ^2.3.5 # Versi stabil terbaru
+  flutter_riverpod: ^2.5.1 
+  riverpod_annotation: ^2.3.5 
 
   # --- Firebase Core & Services ---
   firebase_core: ^3.14.0      # Versi stabil terbaru
